[gd_scene load_steps=3 format=3 uid="uid://rgg5eaqfti7f"]

[ext_resource type="Script" path="res://Scenes/scripts/SelectableArea.gd" id="1_ud4dw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mn7bc"]
size = Vector2(150.25, 148)

[node name="POS" type="Area2D"]
script = ExtResource("1_ud4dw")

[node name="mouse_over" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.509762, 0.470421)

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mn7bc")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
